--- a/TODO
+++ b/TODO
@@ -1,7 +1,11 @@
-make the back button work
-add a user/account menu in the header
-add a grid to the new entry menu
 convert the remaining entry type partials
-implement authentication enforcement
 add header graphic
 add favicon.ico
+flash notice popup
+confirm logout
+confirm entry delete
+add baby & user images
+clean up UPR create form
+ads in footer
+guess limits for duration / amount sliders
+experiment with javascript timers
