Updated TODO list.

--- a/TODO
+++ b/TODO
@@ -1,4 +1,6 @@
 convert the remaining entry type partials
+add 5/15/30/45/60 minutes ago buttons to "when" entry
+"duration" label is bolded on breastfeed entry partial?
 add header graphic
 add favicon.ico
 flash notice popup
